Add Research Gaps & Market Opportunity doc to Flooring section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
     - Market Analysis: flooring/market-analysis.md
     - Operational Guide: flooring/operational-guide.md
     - Synergies: flooring/synergies.md
+    - Research Gaps & Opportunity: flooring/research-gaps.md
 
   - 1. Strategy:
     - Overview: ch1-strategic-framework/index.md
