--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,10 +36,20 @@ nav:
 
   - Flooring:
     - Overview: flooring/index.md
+    - FY2026 Launch Strategy: flooring/launch-strategy.md
     - Market Analysis: flooring/market-analysis.md
+    - Scope Bundling Analysis: flooring/scope-bundling.md
+    - Competitive Intelligence: flooring/competitive-intel.md
     - Operational Guide: flooring/operational-guide.md
     - Synergies: flooring/synergies.md
+    - Subcontractor & Training: flooring/subcontractor-vetting.md
     - Research Gaps & Opportunity: flooring/research-gaps.md
+    - Research Validation: flooring/rebuttals.md
+    - Pilot Controls: flooring/pilot-controls.md
+    - GC One-Pager: flooring/gc-one-pager.md
+    - QC Integration: flooring/qc-integration.md
+    - Forms Package: flooring/forms-readme.md
+    - Daily Log Addendum: flooring/daily-log-addendum.md
 
   - 1. Strategy:
     - Overview: ch1-strategic-framework/index.md
