Restructure Flooring chapter: skimmable core + detailed attachments
STRUCTURE CHANGE:
- Core sections (6): Strategy, Market, Scope/Pricing, Operations/Risk, Pilot, Implementation
- Reference attachments (6): Competitor Profiles, Pricing Tables, Subcontractor/Training, Research Validation, Conversation Scripts, Contacts/Forms
- Tools (2): GC One-Pager, Daily Log Addendum

IMPROVEMENTS:
- Reduced cognitive load: main content is skimmable
- Detailed tables/profiles moved to attachments with inline links
- All content preserved, just reorganized
- Navigation reflects logical reading flow

Replaces 15 fragmented docs with organized chapter structure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,20 +36,22 @@ nav:
 
   - Flooring:
     - Overview: flooring/index.md
-    - FY2026 Launch Strategy: flooring/launch-strategy.md
-    - Market Analysis: flooring/market-analysis.md
-    - Scope Bundling Analysis: flooring/scope-bundling.md
-    - Competitive Intelligence: flooring/competitive-intel.md
-    - Operational Guide: flooring/operational-guide.md
-    - Synergies: flooring/synergies.md
-    - Subcontractor & Training: flooring/subcontractor-vetting.md
-    - Research Gaps & Opportunity: flooring/research-gaps.md
-    - Research Validation: flooring/rebuttals.md
-    - Pilot Controls: flooring/pilot-controls.md
-    - GC One-Pager: flooring/gc-one-pager.md
-    - QC Integration: flooring/qc-integration.md
-    - Forms Package: flooring/forms-readme.md
-    - Daily Log Addendum: flooring/daily-log-addendum.md
+    - Strategy & Rationale: flooring/strategy.md
+    - Market Opportunity: flooring/market-opportunity.md
+    - Scope & Pricing: flooring/scope-pricing.md
+    - Operations & Risk: flooring/operations-risk.md
+    - Pilot Execution: flooring/pilot-execution.md
+    - Implementation Timeline: flooring/implementation.md
+    - Tools:
+      - GC One-Pager: flooring/gc-one-pager.md
+      - Daily Log Addendum: flooring/daily-log-addendum.md
+    - Reference:
+      - Competitor Profiles: flooring/attachments/competitor-profiles.md
+      - Pricing Tables: flooring/attachments/pricing-tables.md
+      - Subcontractor & Training: flooring/attachments/subcontractor-training.md
+      - Research Validation: flooring/attachments/research-validation.md
+      - Conversation Scripts: flooring/attachments/conversation-scripts.md
+      - Contacts & Forms: flooring/attachments/contacts-forms.md
 
   - 1. Strategy:
     - Overview: ch1-strategic-framework/index.md
